--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
     <groupId>tech.reliab.course.toryanikiv.bank</groupId>
     <artifactId>toryanikivLab</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
